creation navigation (li)
creation <nav>

--- a/index.html
+++ b/index.html
@@ -7,7 +7,23 @@
 </head>
 <body>
     <header>
+        <nav>
+                <li>
+                    <a href ="#"> Accueil</a>
+                </li>
 
+                <li>
+                    <a href ="#"> Accueil</a>
+                </li>
+
+                <li>
+                    <a href ="#"> Accueil</a>
+                </li>
+
+                <li>
+                    <a href ="#"> Accueil</a>
+                </li>
+        </nav>
 
     </header>
 
