--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Test B2</title>
+    <title>Test Accueil</title>
 
 </head>
 <body>
